--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>ngx-diff</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.10586c6fe6a94412813a.css"></head>
 <body id="page-top">
   <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.244848bca76ad2b03bf5.js" nomodule defer></script><script src="polyfills-es2015.bb8587c086386e966acb.js" type="module"></script><script src="main-es2015.1faa136c92dfe168dc64.js" type="module"></script><script src="main-es5.1faa136c92dfe168dc64.js" nomodule defer></script></body>
 </html>
