--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.e1a6b8b9c84a9bc94d76.css"></head>
 <body id="page-top">
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.681bd8a4edb177c86959.js" type="module"></script><script src="runtime-es5.681bd8a4edb177c86959.js" nomodule defer></script><script src="polyfills-es5.8e9dc8e846bba5448842.js" nomodule defer></script><script src="polyfills-es2015.3ce4abb00a2caa4a7c3f.js" type="module"></script><script src="main-es2015.a7ba89482d982779e705.js" type="module"></script><script src="main-es5.a7ba89482d982779e705.js" nomodule defer></script></body>
 </html>
