--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ngx-diff</title>
+  <title>NgxDiffDemo</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body id="page-top">
+<body>
   <app-root></app-root>
 </body>
 </html>
