--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography mat-app-background">
     <app-root></app-root>
   </body>
 </html>
